<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <ImageView
        android:id="@+id/profilePictureImageView"
        android:layout_width="@dimen/size_list_profile_photo"
        android:layout_height="@dimen/size_list_profile_photo"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:width="@dimen/size_list_profile_photo"
        android:height="@dimen/size_list_profile_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/default_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/originLocationLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/originLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:text="@string/default_location"
        app:layout_constraintEnd_toEndOf="@+id/occupationLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/occupationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:text="@string/default_occupation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originLocationLabel"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>